styling and little presentation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Hippolyte Dubois</title>
 
     <link rel="stylesheet" href="./reset.css">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
@@ -15,9 +15,22 @@
 <body onload="display()">
     <p class="bandeau"></p><p class="bandeau"></p><p class="bandeau"></p>
 
-    <p id="kptn">K P T N</p>
-
-    <img src="./me.png" alt="hey is me">
+    <div class="container-center">
+        <div id="name">
+            <p id="kptn">K P T N</p>
+            <h2>HIPPOLYTE DUBOIS</h2>
+        </div>
+        <img id="img-me" src="./me.png" alt="hey is me">
+        <p class="text">
+            Yes, that's me.
+        </p>
+        <p class="text">
+            I'm a 20 year old CS student, with an interest in everything artistic. Currently studying computer vision @Nantes University.
+        </p>
+        <p class="text">
+            You can find me on <a href="https://soundcloud.com/igor-spoutnikrievskypovitch-rodriguez-dubois/">soundcloud</a> and <a href="github.com/hippolyte-dubois/">github</a>
+        </p>
+    </div>
 
 </body>
 </html>
