--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hippolyte Dubois</title>
+    <title>@Contact - Hippolyte Dubois</title>
 
     <link rel="stylesheet" href="./reset.css">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
@@ -17,8 +17,7 @@
 
     <div class="container-center">
         <div id="name">
-            <p id="kptn">K P T N</p>
-            <h2>HIPPOLYTE DUBOIS</h2>
+            <h2>contact</h2>
         </div>
 
         <div id="menu">
@@ -26,15 +25,8 @@
             <a href="./contact.html">contact</a>
         </div>
 
-        <img id="img-me" src="./me.png" alt="hey is me">
         <p class="text">
-            Yes, that's me.
-        </p>
-        <p class="text">
-            I'm a 20 year old CS student, with an interest in everything artistic. Currently studying computer vision @Nantes University.
-        </p>
-        <p class="text">
-            You can find me on <a href="https://soundcloud.com/igor-spoutnikrievskypovitch-rodriguez-dubois/">soundcloud</a> and <a href="github.com/hippolyte-dubois/">github</a>
+            if you want more details about one of my projects, or if you want to work with me, you can email me @ <a href="hippolyte.dubois@gmail.com">hippolyte.dubois@gmail.com</a> 
         </p>
     </div>
 
