--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,8 @@
 
         <div id="menu">
             <a href="./projects.html">projects</a>
-            <a href="./contact.html">contact</a>
+             · 
+            <a href="./index.html">home</a>
         </div>
 
         <p class="text">
