--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +10,14 @@
     <link rel="stylesheet" href="./reset.css">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
-    <script type="text/javascript" src="./script.js" ></script>
+    <script type="text/javascript" src="./script.js"></script>
 
 </head>
+
 <body onload="display()">
-    <p class="bandeau"></p><p class="bandeau"></p><p class="bandeau"></p>
+    <p class="bandeau"></p>
+    <p class="bandeau"></p>
+    <p class="bandeau"></p>
 
     <div class="container-center">
         <div id="name">
@@ -21,14 +25,17 @@
         </div>
 
         <div id="menu">
-            <a href="./projects.html">projects</a>
+            <a href="./index.html">home</a>
+             · 
             <a href="./contact.html">contact</a>
         </div>
 
         <p class="text">
-            if you want more details about one of my projects, or if you want to work with me, you can email me @ <a href="hippolyte.dubois@gmail.com">hippolyte.dubois@gmail.com</a> 
+            if you want more details about one of my projects, or if you want to work with me, you can email me @
+            <a href="hippolyte.dubois@gmail.com">hippolyte.dubois@gmail.com</a>
         </p>
     </div>
 
 </body>
+
 </html>
