fixed broken github link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             I'm a 20 year old CS student, with an interest in everything artistic. Currently studying computer vision @Nantes University.
         </p>
         <p class="text">
-            You can find me on <a href="https://soundcloud.com/igor-spoutnikrievskypovitch-rodriguez-dubois/">soundcloud</a> and <a href="github.com/hippolyte-dubois/">github</a>
+            You can find me on <a href="https://soundcloud.com/igor-spoutnikrievskypovitch-rodriguez-dubois/">soundcloud</a> and <a href="https://github.com/hippolyte-dubois/">github</a>
         </p>
     </div>
 
