--- a/index.html
+++ b/index.html
@@ -17,23 +17,91 @@
 
     <div class="container-center">
         <div id="name">
-            <p id="kptn">K P T N</p>
             <h2>HIPPOLYTE DUBOIS</h2>
+            <p id="kptn">kp ͭn</p>
         </div>
-
+        <!--
         <div id="menu">
             <a href="./projects.html">projects</a>
              · 
             <a href="./contact.html">contact</a>
         </div>
-
+        -->
         <img id="img-me" src="./me.png" alt="hey is me">
         <p class="text">
-            Yes, that's me.
+            ^me irl
         </p>
         <p class="text">
             I'm a 20 year old CS student, with an interest in everything artistic. Currently studying computer vision @Nantes University.
         </p>
+        <p class="text">·</p>
+        <div id="cv">
+            <p class="title">Education</p>
+            <p>2017-2019</p>
+            <p class="desc">
+                Master degree in Computer Science with a computer vision speciality. <br>
+                UFR Sciences, Nantes, France.
+            </p>
+            <p>2016-2017</p>
+            <p class="desc">
+                BSc Computing: Graphics and Animation, 3rd year. <br>
+                Robert Gordon University, Aberdeen, Scotland.
+            </p>
+            <p>2014-2016</p>
+            <p class="desc">
+                DUT Computer Science. <br>
+                IUT, Limoges, France.
+            </p>
+            <p>2012-2014</p>
+            <p class="desc">
+                Baccalauréat STD2A (Science and Technics: Design and Applied Arts). <br>
+                Lycée Raymond Loewy, La Souterraine, France.
+            </p>
+        </div>
+
+        <p class="text">·</p>
+        <div id="cv">
+            <p class="title">Experience</p>
+            <p>2017 ~ Summer</p>
+            <p class="desc">
+                Co-creator of the Hangar 6ó6, a place dedicated to art and culture for all. <br>
+                Cultural coordinator, working with local associations to allow kids from every social background to come and experiment with contemporary art. <br>
+                This project lasted for two months and ended with a two-day exhbitions that brought more than 200 people (quite impressive for a rural area). <br>
+                La Souterraine, France.
+            </p>
+            <p>2016 ~ March to May</p>
+            <p class="desc">
+                10 weeks internship in Edinburgh's Napier University's Creative Industries research labs. <br>
+                Real-time motion detection and feedback using Max/MSP. <br>
+                Edinburgh, Scotland.
+            </p>
+        </div>
+
+        <p class="text">·</p>
+        <div id="cv">
+            <p class="title">Skills</p>
+            <p>Programming</p>
+            <p class="desc">
+                I can code in various languages, my gotos being C/C++, Python. <br>
+                I've worked with Java, JavaScript (NodeJS, AngularJS), PHP, R, Julia, and Bash.
+            </p>
+            <p>Algorithmic</p>
+            <p class="desc">
+                I've acquired a good understanding of algorithmic, and can implement most of the usual ones. <br>
+                I don't know all of them perfectly, but I can use them and make decisions to adapt to a given issue.
+            </p>
+            <p>Languages</p>
+            <p class="desc">
+                I'm born and raised French, but I've lived, worked, and studied in an English speaking country for around a year, making me fluent in English. <br>
+                In 2016 I scored 960/990 to TOEIC.
+            </p>
+            <p>Art, Design, and Culture</p>
+            <p class="desc">
+                I've studied design and applied arts for 2 years, and I've been developing my skills and knowledge ever since. <br>
+                I've a particular interest into generative art and experimental music. <br>
+                I'm also interested in the place that design can take in society, and how it can shape the way we interact.
+            </p>
+        </div>
         <p class="text">
             You can find me on <a href="https://soundcloud.com/igor-spoutnikrievskypovitch-rodriguez-dubois/">soundcloud</a> and <a href="https://github.com/hippolyte-dubois/">github</a>
         </p>
