--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
 </head>
 <body onload="display()">
-    <p class="bandeau"></p><p class="bandeau"></p><p class="bandeau"></p>
+    <!--<p class="bandeau"></p><p class="bandeau"></p><p class="bandeau"></p>-->
 
     <div class="container-center">
         <div id="name">
             <h2>HIPPOLYTE DUBOIS</h2>
-            <p id="kptn">kp ͭn</p>
+            <!--<p id="kptn">kp ͭn</p>-->
         </div>
         <!--
         <div id="menu">
